@@ -1,3 +1,9 @@
+globus-proxy-utils (6.4-1+gt6.@distro@) @distro@; urgency=low
+
+  * Fix test wrapper with old automake
+
+ -- Globus Toolkit <support@globus.org>  Sat, 01 Feb 2014 17:46:35 -0500
+
 globus-proxy-utils (6.3-1+gt6.@distro@) @distro@; urgency=low
 
   * Fix test cred permissions
